--- a/app/src/main/res/layout/content_unique_city.xml
+++ b/app/src/main/res/layout/content_unique_city.xml
@@ -165,4 +165,37 @@
         android:layout_below="@+id/longitudeLabel"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.eddie.citymanager.UniqueCityActivity"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/eloignement"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        android:src="@drawable/ic_remove_circle_outline_black_24dp"
+        android:id="@+id/ActionButtonDelete"
+        android:layout_alignBottom="@+id/codeRegion"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:id="@+id/ActionButtonEdit"
+        app:fabSize="mini"
+        android:src="@drawable/ic_mode_edit_black_24dp"
+        android:layout_above="@+id/codeINSEE"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
